service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: ClusterIP  # or LoadBalancer if not using ALB Ingress
  selector:
    app: node-app   # This must match the Pod label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
